mais dois commits

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         Mais um dia!!
-        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <spam> wonderful world </spam>
+        <script type="module" src="index.js"> </script>
     </body>
 </html>
