mais alguns testes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
     <head>
-        Mais um dia!!
+        <meta charset="UTF-8"/>
+        <title> Um teste para Git </title>
     </head>
     <body>
+        <div id="titulo">
+            <h1 id="h1"> Um titulo bem grande </h1>
+        </div>
         <spam> wonderful world </spam>
         <script type="module" src="index.js"> </script>
     </body>
